# metaflow_examples_demo

./: .gitignore  README.md  demo_collab.ipynb  demo_metaflow.py  demo_metaflow_parallel.py  demo_metaflow_parallel_wandb.py  pyproject.toml
model_vertex_registry/: saving_model_vertex.py
notebook_in_metaflow/: notebook_flow.py  pyproject.toml  simple.ipynb
